--- a/.github/workflows/main_guillaumeh-webapp-frontend.yml
+++ b/.github/workflows/main_guillaumeh-webapp-frontend.yml
@@ -31,6 +31,10 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      - name: Test with pytest
+        run: pytest tests/test_app.py
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
